--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,10 @@
+title: Paul Oates
+author: Paul Oates
 
+description: >-
+  TODO
+
+remote_theme: pages-themes/hacker@v0.2.0
+
+plugins:
+- jekyll-remote-theme 
